Fix navbar overflow

--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,7 @@
 }
 
 #header .navbar-brand{
-  padding: 0;
+  padding: 10px;
   margin-left: 0;
 }
 
